k8s/blog/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    istio-injection: "enabled"
